@@ -1,3 +1,7 @@
+2015-04-02  Gary Benson <gbenson@redhat.com>
+
+	* gdb.base/break-probes.exp: Cope with "target:" sysroot.
+
 2015-04-01  Sasha Smundak  <asmundak@google.com>
 
 	* gdb.python/py-unwind-maint.c: New file.
